# wp1.7-soa-wrapper

./: CMakeLists.txt  README.md  allocator.h  aos.h  aos_wrapper.h  debug.h  factory.h  gpu.h  helper.h  kernel.cu  kernel.h  main.cpp  main.cu  skeleton.h  soa.h  soa_wrapper.h  unittests.cpp  unittests.cu  wrapper.h  wrapper_aos.h  wrapper_soa.h
.github/workflows/: build-and-test.yml  documentation.yml  unit-tests.yml
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md
include/: wrapper.h
memlayout/: CMakeLists.txt  wrapper.h
tests/: CMakeLists.txt  test_cpu.cpp  test_cuda.cu
tests/cpu/: CMakeLists.txt  test_cpu.cpp
tests/gpu/: CMakeLists.txt  test_cuda.cu
tests/include/: debug.h  device_ptr.h  kernel.h  skeleton.h  structs.h  vector.h
